--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <link rel="icon" href="http://example.com/favicon.png">
+    <link rel="icon" href="images\logo.PNG">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -19,6 +19,7 @@
   <body>
     <header>
       <div class="inner">
+        <img src="images\logo.PNG" alt="logo" width="100" height="100">
         <h1>Rush</h1>
         <h2>Music File Organizer</h2>
         <a href="https://github.com/rusith/Rush" class="button"><small>View project on</small> GitHub</a>
