--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p># the ability to choose the order of your folder structure.<br/>
           # to select how the files are named.<br/>
           # name files as you want.<br/>
-          # 0 harm to files.<br/>
+          # no harm to files.<br/>
           # detailed log.<br/>
           # simple interface</p>
 
