--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-          <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rush - Music File Organizer</h3>
 
           <p>Rush is an simple tool that will allow you to organize your music files by moving, renaming, and placing them into the directory structure of your choice based on the file order.</p>
 
