--- a/index.html
+++ b/index.html
@@ -42,9 +42,45 @@
           # no harm to files.<br/>
           # detailed log.<br/>
           # simple interface</p>
-
+                  <!-- AddToAny BEGIN -->
+          <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+          <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+          <a class="a2a_button_facebook"></a>
+          <a class="a2a_button_twitter"></a>
+          <a class="a2a_button_google_plus"></a>
+          </div>
+          <script async src="https://static.addtoany.com/menu/page.js"></script>
+        <!-- AddToAny END -->
+        <div id="disqus_thread"></div>
+        <script>
+          /**
+           *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+           *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+           */
+          /*
+          var disqus_config = function () {
+              this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+              this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          };
+          */
+          (function() {  // DON'T EDIT BELOW THIS LINE
+              var d = document, s = d.createElement('script');
+              
+              s.src = 'http://geniusclipboardmanager.disqus.com/embed.js';
+              
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+          })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments</a></noscript>
+        <!-- hitwebcounter Code START -->
+        <a href="http://www.hitwebcounter.com" target="_blank">
+        <img src="http://hitwebcounter.com/counter/counter.php?page=6435872&style=0024&nbdigits=8&type=page&initCount=0" title="" Alt=""   border="0" >
+        </a>                                        <br/>
+        <a href="http://www.hitwebcounter.com" title="How Many People Visit" 
+        target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; 
+        font-size: 9px; color: #908C86; text-decoration: underline ;"><strong>How Many People Visit                                        </strong>
         </section>
-
         <aside id="sidebar">
           <a href="https://github.com/rusith/Rush/releases/download/1.0/setup.exe" class="button">
             <small>Download</small>
@@ -53,6 +89,7 @@
           <p class="repo-owner"><a href="https://github.com/rusith/Rush"></a> is maintained by <a href="https://github.com/rusith">rusith</a>.</p>
         </aside>
       </div>
+
     </div>
 
   
