--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
           # no harm to files.<br/>
           # detailed log.<br/>
           # simple interface</p>
+		  
+		  <h3>
+          <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screen Shots</h3>
+		  <img src="images/screenshots/rush_mainwindow.PNG" alt="main window"/>
+		  <br/>
+		  <img src="images/screenshots/rush_processing.PNG" alt="processing"/>
+		  <br/>
+		  <br/>
                   <!-- AddToAny BEGIN -->
           <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
           <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
