--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
       <div class="inner">
         <h1>Rush</h1>
         <h2>Music File Organizer</h2>
-        <a href="https://github.com/rusith/Rush" class="button"><small>View project on</small> GitHub</a>
+        <div>
+          <a href="https://github.com/rusith/Rush" class="button"><small>View project on</small> GitHub</a>    
+        </div>
       </div>
     </header>
 
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+          <a href="https://github.com/rusith/Rush/releases/download/1.0/setup.exe" class="button" style="visible:block;">
+              <small>Download</small>
+                For Window
+          </a>
           <h3>
           <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rush - Music File Organizer</h3>
 
