--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link media="screen" href="stylesheets/stylesheet.css" type="text/css" rel="stylesheet">
     <link media="screen" href="stylesheets/github-light.css" type="text/css" rel="stylesheet">
     <link media="screen" href="stylesheets/css" type="text/css" rel="stylesheet">
-    <link rel="icon" href="images\logo.png">
+    <link rel="icon" href="images\logo.PNG">
 </head>
 <body>
   <section class="page-header">
-    <img src="images/logo.png" style="width:100px;height:100px;">
+    <img src="images/logo.PNG" style="width:100px;height:100px;">
     <h1 class="project-name">Rush</h1>
     <h2 class="project-tagline">Media File Organizer </h2>
     <a class="btn" href="https://github.com/rusith/Rush">View on GitHub</a>
