--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="project-name">Rush</h1>
     <h2 class="project-tagline">Media File Organizer </h2>
     <a class="btn" href="https://github.com/rusith/Rush">View on GitHub</a>
-    <a class="btn" href="https://github.com/rusith/Rush/releases/download/1.0/setup.exe">For Windows</a>
+    <a class="btn" href="https://github.com/rusith/Rush/releases/download/1.0/setup.exe">Download</a>
     <h3 class="project-tagline" id="downloadcountdisplay"></h3>
   </section>
 
