--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images\logo.PNG">
 </head>
 <body>
-  <section class="page-header">
+  <section class="page-header" style="height: 480px;">
     <img src="images/logo.PNG" style="width:100px;height:100px;">
     <h1 class="project-name">Rush</h1>
     <h2 class="project-tagline">Media File Organizer </h2>
