--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Rush -Music File Organizer  </title>
     <meta name="description" content="Rush is a music file organizer for windows">
+    <meta charset="utf-8" name="keywords" content="rush,media,music,file,organizer,music organizer,free,open source,organie,clean,library">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link media="screen" href="stylesheets/normalize.css" type="text/css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
