--- a/index.html
+++ b/index.html
@@ -69,7 +69,28 @@
           <script async src="https://static.addtoany.com/menu/page.js"></script>
           <div class="fb-comments"></div>
         <!-- AddToAny END -->
-
+        <!--<div id="disqus_thread"></div>
+        <script>
+          /**
+           *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+           *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+           */
+          /*
+          var disqus_config = function () {
+              this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+              this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          };
+          */
+          (function() {  // DON'T EDIT BELOW THIS LINE
+              var d = document, s = d.createElement('script');
+              
+              s.src = 'http://geniusclipboardmanager.disqus.com/embed.js';
+              
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+          })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments</a></noscript>-->
         <!-- hitwebcounter Code START -->
         <a href="http://www.hitwebcounter.com" target="_blank">
         <img src="http://hitwebcounter.com/counter/counter.php?page=6435872&style=0024&nbdigits=8&type=page&initCount=0" title="" Alt=""   border="0" >
