--- a/index.html
+++ b/index.html
@@ -45,13 +45,7 @@
 
 
     <p>Rush is an simple tool that will allow you to organize your music files by moving, renaming, and placing them into the directory . rush can copy files from different locations and place them in a 1 destination folder and organize in a folder structure. you can specify the folder structure and naming rules of files. Rush will copy files and rename files as you want. no files will harmed . during the operation. rush supports most popular file types .<br/>
-    supported file types : <br/>
-    mp3<br/>
-    m4a<br/>
-    aac<br/>
-    falc<br/>
-    ogg<br/>
-    wma
+    supported file types : mp3,m4a,aac,falc,ogg,wma
 
     <h2>
     <a aria-hidden="true" href="#features" class="anchor" id="features"><span class="octicon octicon-link" aria-hidden="true"></span></a>Features</h2>
