--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a aria-hidden="true" href="#genius-" class="anchor" id="genius-"><span class="octicon octicon-link" aria-hidden="true"></span></a>Rush </h1>
 
     <p>Rush is a powerful media file oraganizer </p>
-    <p>latest version : 1.0 </p>
+    <p>latest version : 1.1 </p>
     <h2>
     <a aria-hidden="true" href="#features" class="anchor" id="features"><span class="octicon octicon-link" aria-hidden="true"></span></a>Screen shots</h2>
     <img src="images/screens/rush_mainwindow.PNG">
@@ -58,6 +58,7 @@
         <li>detailed log and reports</li>
         <li>minimum memory usage</li>
         <li>high speed processing</li>
+        <li>option to copy / move files</li>
     </ul>
 
                   <!-- AddToAny BEGIN -->
