--- a/index.html
+++ b/index.html
@@ -42,25 +42,19 @@
     <img src="images/screens/rush_processing.PNG">
     <h2>
     <a aria-hidden="true" href="#overview" class="anchor" id="overview"><span class="octicon octicon-link" aria-hidden="true"></span></a>Overview</h2>
-
-
-    <p>Rush is an simple tool that will allow you to organize your music files by moving, renaming, and placing them into the directory . rush can copy files from different locations and place them in a 1 destination folder and organize in a folder structure. you can specify the folder structure and naming rules of files. Rush will copy files and rename files as you want. no files will harmed . during the operation. rush supports most popular file types .<br/>
-    supported file types : mp3,m4a,aac,falc,ogg,wma
-
-    <h2>
-    <a aria-hidden="true" href="#features" class="anchor" id="features"><span class="octicon octicon-link" aria-hidden="true"></span></a>Features</h2>
-    <ul>
-        <li>simple and easy to use</li>
-        <li>completely free</li>
-        <li>simple interface</li>
-        <li>no harm to any file</li>
-        <li>more options to rename files</li>
-        <li>detailed log and reports</li>
-        <li>minimum memory usage</li>
-        <li>high speed processing</li>
-        <li>option to copy / move files</li>
-    </ul>
-
+    <p>If you have an impressive music library and need a way to sort your files efficiently, you should probably consider turning to third-party software solutions, as they can help you achieve quick, convenient results.
+    Rush is one of the applications that can simplify your work by enabling you to organize your audio files after various criteria.</p>
+    <h4>Simplistic interface</h4>
+    <p>This program comes with a minimalistic, user-friendly interface that packs a handful of neatly organized functions, which can be easily operated directly from the main window, without browsing endless menus looking for them.
+    Although it does not feature a standard help manual, you can display a set of helpful tips by clicking the question mark icon. No additional configuration menu, window or pane is available, keeping this application as simple and accessible as possible.</p>
+    <h4>Organize music files on your PC</h4>
+    <p>Rush can help you organize your music library with minimum efforts by letting you move, rename and sort your data by various criteria. Before you begin the sorting process, you need to specify the source locations and a destination path on your PC.
+    After doing so, you can toggle sorting criteria by toggling file types and defining a file order in the designated field. Among the supported formats, you can find MP3, M4A, AAC, FLAC, OGG and WMA. Setting the file order can be done by typing your desired order directly in the dedicated field, as guided by the brief instructions. It is possible that you can enable file overwriting, as well.</p>
+    <h4>Generates logs</h4>
+    <p>It is possible to view a log after the operation has been completed, which includes additional information such as a message and a message type. You can save the report as a file on your computer by using the Save to a File function.</p>
+    <h4>Lightweight audio file organizer that can generate logs</h4>
+    <p>To wrap it up, Rush is a handy file organizer that lets you sort your music library in a quick manner and generates a report afterward. It comes with a simple user interface that packs a handful of accessible functions and although it lacks standard help documentation, you are provided with a brief set of instructions, which can help you understand its purpose better.</p>
+    <br/> 
                   <!-- AddToAny BEGIN -->
           <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
           <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
